<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/accountVerify"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_access">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="154dp"
        android:fontFamily="@font/avenir"
        android:text="@string/verify_mobile_number"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:id="@+id/textView4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_gravity="start"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/avenir"
        android:text="@string/we_will_send_an_sms_from_your_phone_to_verify_if_your_phone_number_is_registered_with_your_bank_account"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:id="@+id/textView5"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:id="@+id/relativeLayout"
        android:layout_below="@id/textView5"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:padding="2dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sim1Selection"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/sim_1"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:textAlignment="textStart"
            android:background="@drawable/sim1_select_first"
            android:layout_gravity="start"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sim2Selection"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/sim2_select_first"
            android:text="@string/sim_2"
            android:textColor="@android:color/black"
            android:textAlignment="textEnd"
            android:layout_marginLeft="80dp"
            android:paddingRight="5dp"
            android:layout_gravity="end"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/nextVerifyComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
        android:drawableRight="@drawable/ic_chevron_right_black_24dp"
        android:fontFamily="@font/avenir"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

</RelativeLayout>